...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Profile Picture Container -->
        <FrameLayout
            android:id="@+id/framelayout_profile_picture_container"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
                android:text="@string/name_label"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Edit Name Field -->
            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/enter_name"
...
                android:text="@string/email_label"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Edit Email Field -->
            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/enter_email"
...
                android:text="@string/phone_label"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Edit Phone Number Field -->
            <EditText
                android:id="@+id/edittext_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/enter_phone_number"
...
            android:layout_marginTop="10dp"
            android:background="@color/lighter_gray"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_phone_row" />

        <!-- Delete Profile Picture Button -->
        <Button
            android:id="@+id/buttonDeleteProfilePic"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/lighter_purple"
            android:text="@string/profile_pic_delete"
            android:textColor="@color/white"
...
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_4" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSaveProfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/lighter_purple"
            android:text="@string/save_button"
            android:textColor="@color/white"
...
